--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,14 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
 body {
     background: #fafbfc;
-    margin: 0;
-    font-family: 'Fira Code', monospace;
-    font-size: 19px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
 }
 
 a {
@@ -17,7 +18,7 @@ a {
 }
 
 a:not(#title):hover {
-    transition: 0.1s;
+    transition: 0.2s;
     color: #6fb2e8 !important;
 }
 
