--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 * {
     margin: 0;
@@ -11,12 +12,21 @@ html {
 }
 
 body {
-    background: #fafbfc;
-    font-family: 'Roboto', sans-serif;
+    background: #f4f4f4;
+    // font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 a {
     text-decoration: none;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
 }
 
 header a {
@@ -31,6 +41,10 @@ header a:not(#logo):hover,
 
 a:visited {
     color: inherit;
+}
+
+header {
+    box-shadow: 0 6px 5px 1px #1d1d1d;
 }
 
 header,
